--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Ty Thompson</title>
 </head>
 <body>
-    <p>initial test</p>
+    <p>Hi, welcome to my small piece of the internet.</p>
+    <ul>
+        <li><a href="https://github.com/tythompson213">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/tythompson2418/">Linkedin</a></li>
+    </ul>
 </body>
 </html>
