--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
     <title>Ty Thompson</title>
 </head>
 <body>
-    <p>Hi, welcome to my small piece of the internet.</p>
-    <p>I'm a software engineer and in my current role I'm hands-on with all aspects of the software development cycle.</p>
-    <p>I have worked exclusivley at start-ups because I enjoy the fast pace and the ability learn new technologies.</p>
-
-    <p>In my free time I like to learn new languages, frameworks, or just trying out ideas I have. My personal projects can be <a href="https://github.com/tythompson213">found here.</a></p>
-    <p>If you would like to talk you can reach me on  <a href="https://www.linkedin.com/in/tythompson2418/">Linkedin</a></p>
-    <p>Or send me an email: tythompson2418 at gmail dot com</p>
+    <h3>Hi, welcome to my small piece of the internet.</h3>
+    <p>I'm a software engineer and have worked exclusivley at start-ups because I enjoy the fast pace and the ability learn new technologies.<br />
+    In my free time I like to learn new languages, frameworks, or just trying out ideas I have. My personal projects can be <a href="https://github.com/tythompson213">found here.</a><br />
+    If you would like to talk you can reach me on  <a href="https://www.linkedin.com/in/tythompson2418/">Linkedin.</a></p>
 </body>
 </html>
