--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <title>Ty Thompson</title>
 </head>
 <body>
-    <h3>Hi, welcome to my small piece of the internet.</h3>
-    <p>I'm a software engineer and have worked exclusivley at start-ups because I enjoy the fast pace and the ability learn new technologies.<br />
-    In my free time I like to learn new languages, frameworks, or just trying out ideas I have.<br /> My personal projects can be <a href="https://github.com/tythompson213">found here.</a><br />
-    If you would like to talk you can reach me on  <a href="https://www.linkedin.com/in/tythompson2418/">Linkedin.</a></p>
+    <div class="content">
+        <h3>Ty Thompson</h3>
+        <p>Hi, I'm a software engineer and have been developing software at start-ups for the past 5 years.<br />
+        In my free time I like to learn new languages, frameworks, or just trying out ideas I have.
+        </p>
+        <br />
+        <p>My personal projects can be <a href="https://github.com/tythompson213">found here.</a><br />
+        If you would like to talk you can reach me on  <a href="https://www.linkedin.com/in/tythompson2418/">Linkedin.</a>
+        </p>
+    </div>
 </body>
 </html>
