changing about me

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="content">
         <h3>Ty Thompson</h3>
-        <p>Hi, I'm a software engineer and have been developing software at start-ups for the past 5 years.<br />
+        <p>Hi, I'm a software engineer and have been working at start-ups for the past 5 years.<br />
         In my free time I like to learn new languages, frameworks, or just trying out ideas I have.
         </p>
         <br />
